--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -1,4 +1,4 @@
-.business {
+.businessDetails {
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
@@ -8,8 +8,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.business-link {
-  color: #61dafb;
 }
