made category it's own component, added transition and +/- signs for dropdown

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -16,8 +16,22 @@
 
 .content {
   padding: 0 18px;
-  display: none;
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
   color: black;
+}
+
+.collapsible:after {
+  content: '\f067';
+  font-family: "fontawesome";
+  font-size: 17px;
+  color: black;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: '\f068';
 }
