--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -9,3 +9,63 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+/* The Modal (background) */
+.modal {
+  color: black;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  max-width: 500px; 
+}
+
+/* The Close Button (x) */
+.close {
+	position: absolute;
+	right: 10px;
+	top: 0;
+	color: #000;
+	font-size: 35px;
+	font-weight: bold;
+	padding-top: 2px;
+}
+
+.close:hover,
+.close:focus {
+	color: red;
+	cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+	-webkit-animation: animatezoom 0.6s;
+	animation: animatezoom 0.6s
+}
+
+.imgcontainer {
+	text-align: center;
+	position: relative;
+}
+
+/* img.avatar {
+	width: 40%;
+	border-radius: 50%;
+} */
+
+.container {
+  padding: 16px;
+}
