--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,19 +1,171 @@
-/* .navBar {
-  text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav {
+  background-color: #a8d0e6;
+  width: 100%;
 }
 
-.navBar-link {
-  color: #61dafb;
-} */
-nav {
-  background-color: lime;
+.top{
+  position: fixed;
   width: 100%;
+  z-index: 1;
+}
+
+.icon {
+  height: 1.5em;
+}
+
+.top {
+  top: 0;
+}
+
+.bar {
+  width: 100%;
+  overflow: hidden;
+}
+
+.center-content .bar {
+  display: inline-block;
+  width: auto;
+}
+
+.bar .bar-item {
+  padding: 8px 8px;
+  float: left;
+  width: auto;
+  border: none;
+  display: block;
+  outline: 0;
+}
+
+.bar {
+  position: static;
+  float: left;
+}
+
+.bar-block .bar-item {
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: right;
+  border: none;
+  float: none;
+  outline: 0;
+}
+
+.bar-item {
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+}
+
+.container:after, .container:before, .bar:before, .bar:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.bar .button-one {
+  white-space: normal;
+}
+
+.wide {
+  letter-spacing: 4px;
+}
+
+.padding {
+  padding: 8px 16px;
+}
+
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.button-one {
+  border: none;
+  display: inline-block;
+  padding: 8px 16px;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  color: black;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.button-one {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.button-one:disabled {
+  cursor: not-allowed;
+  opacity: 0.3;
+}
+
+.logo {
+  color: #f76c6c;
+}
+@media (hover:hover) {
+  .button-one:hover, .button-one:focus {
+  color: #000!important;
+  background-color: #f76c6c!important;
+  }
+}
+
+.button-one {
+  padding: 4px 8px;
+}
+
+.right {
+  float: right!important;
+}
+
+@media (min-width:700px) {
+  .hide-large {
+    display: none!important;
+  }
+}
+
+@media (max-width:700px) {
+  .padding {
+    padding: 0px
+  }
+
+  .dropdown {
+    background-color: #f76c6c;
+    margin-top: 39px;
+  }
+
+  .dropdown a {
+    text-decoration: none;
+  }
+
+  .hide-small {
+    display: none!important;
+  }
+
+  .menu {
+    height: 39.2px;
+    display: flex!important;
+    justify-content: center!important;
+  }
+
+  .bar-block .bar-item {
+    padding: 8px;
+  }
+}
+
+.black {
+  color: #fff!important;
+  background-color: #000!important;
 }
