--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -2,7 +2,8 @@
   background-color: #777;
   color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: 10px;
+  height: 50px;
   width: 100%;
   border: none;
   text-align: left;
@@ -24,15 +25,13 @@
 }
 
 .collapsible:after {
-  content: '\f067';
-  font-family: "Font Awesome 5 Free";
-  font-size: 17px;
+  content: url(../images/plus.svg);
   color: black;
   float: right;
-  margin-left: 5px;
-  font-weight: 900;
+  width: 20px;
+  height: 20px;
 }
 
 .active:after {
-  content: '\f068';
+  content: url(../images/minus.svg);
 }
