--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -1,16 +1,30 @@
-.businessDetails {
-  text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.business {
+  color: #24305e;
+  background-color: #a8d0e6;
+  padding: 8px;
+  max-width: 500px;
+  margin: 8px auto 0 auto;
+}
+
+.hours {
+  width: 100%;
+}
+
+.day {
+  margin-bottom: 8px
+}
+
+.dayDetails {
+  width: 100%;
+  display: block;
+}
+
+.business h2, .business h3 {
+  margin: 8px 0;
 }
 
 /* The Modal (background) */
+
 .modal {
   color: black;
   position: fixed;
@@ -20,51 +34,48 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
   padding-top: 60px;
 }
 
 /* Modal Content/Box */
+
 .modal-content {
   background-color: #fefefe;
   margin: 5% auto 15% auto;
   border: 1px solid #888;
-  max-width: 500px; 
+  max-width: 500px;
 }
 
 /* The Close Button (x) */
+
 .close {
-	position: absolute;
-	right: 10px;
-	top: 0;
-	color: #000;
-	font-size: 35px;
-	font-weight: bold;
-	padding-top: 2px;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+  padding-top: 2px;
 }
 
-.close:hover,
-.close:focus {
-	color: red;
-	cursor: pointer;
+.close:hover, .close:focus {
+  color: red;
+  cursor: pointer;
 }
 
 /* Add Zoom Animation */
+
 .animate {
-	-webkit-animation: animatezoom 0.6s;
-	animation: animatezoom 0.6s
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
 }
 
 .imgcontainer {
-	text-align: center;
-	position: relative;
+  text-align: center;
+  position: relative;
 }
-
-/* img.avatar {
-	width: 40%;
-	border-radius: 50%;
-} */
 
 .container {
   padding: 16px;
