--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,9 +1,11 @@
 .search-bar {
   color: black;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .search-bar select, .search-bar option {
-  width: 130px;
+  width: 140px;
   text-align-last: center;
 }
 
@@ -16,28 +18,26 @@
 }
 
 .search-bar button {
-  width: 35.96px;
-  border: 2px;
-  padding: 1px 6px 1px 6px;
+  width: 60px;
+  vertical-align: bottom;
+}
+
+.search {
+  height: 30px;
 }
 
 .search-bar input, .search-bar button, .search-bar select {
-  height: 32px;
+  height: 40px;
   font-size: 20px;
 }
 
-@media (max-width:425px) {
+@media (max-width:426px) {
   .search-bar {
     width: 200px;
   }
-
   .search-bar input, .search-bar select {
     margin: 5px 0 5px 0;
     max-width: 100%
-  }
-
-  .search-bar select {
-    width: 164.04px;
   }
 }
 
