--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,25 +1,26 @@
 nav {
-  background-color: #a8d0e6;
   width: 100%;
-}
-
-.top{
+  max-width: 1000px;
   position: fixed;
-  width: 100%;
   z-index: 1;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .icon {
   height: 1.5em;
 }
 
-.top {
-  top: 0;
+.icon {
+  height: 100%;
+  width: 24px;
 }
 
 .bar {
   width: 100%;
   overflow: hidden;
+  background-color: #a8d0e6;
 }
 
 .center-content .bar {
@@ -77,7 +78,7 @@ nav {
 }
 
 .padding {
-  padding: 8px 16px;
+  padding: 8px;
 }
 
 .card {
@@ -114,16 +115,19 @@ nav {
 
 .logo {
   color: #f76c6c;
+  font-size: 20px;
 }
+
 @media (hover:hover) {
   .button-one:hover, .button-one:focus {
-  color: #000!important;
-  background-color: #f76c6c!important;
+    color: #000!important;
+    background-color: #f76c6c!important;
   }
 }
 
 .button-one {
-  padding: 4px 8px;
+  padding: 4px 8px!important;
+  font-size: 20px;
 }
 
 .right {
@@ -137,29 +141,22 @@ nav {
 }
 
 @media (max-width:700px) {
-  .padding {
-    padding: 0px
-  }
-
   .dropdown {
     background-color: #f76c6c;
-    margin-top: 39px;
+    margin-top: 48px;
+    right: 0;
   }
-
   .dropdown a {
     text-decoration: none;
   }
-
   .hide-small {
     display: none!important;
   }
-
   .menu {
-    height: 39.2px;
+    height: 32px;
     display: flex!important;
     justify-content: center!important;
   }
-
   .bar-block .bar-item {
     padding: 8px;
   }
