--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -153,6 +153,7 @@ nav {
     display: none!important;
   }
   .menu {
+    position: static;
     height: 32px;
     display: flex!important;
     justify-content: center!important;
