--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -23,41 +23,57 @@
   margin: 8px 0;
 }
 
+.contactInfo {
+  display: flex;
+}
+
+.business .icon {
+  transform: scaleX(-1);
+  height: 20px;
+}
+
 /* The Modal (background) */
 
 .modal {
+  position: absolute;
   color: black;
-  position: fixed;
+  /* position: fixed; */
   z-index: 1;
-  left: 0;
-  top: 0;
+  left: 50%;
+  top: 48px;
+  padding: inherit;
   width: 100%;
-  height: 100%;
+  /* max-width: 1000px; */
+  transform: translate(-50%, 0);
+  /* height: 100%; */
   overflow: auto;
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   background-color: rgba(0, 0, 0, 0.4);
-  padding-top: 60px;
+  /* padding-top: 60px; */
 }
 
 /* Modal Content/Box */
 
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto 15% auto;
-  border: 1px solid #888;
+  /* margin: 5% auto 15% auto; */
+  /* margin: 8px auto; */
+  margin: auto;
+  /* border: 1px solid #888; */
   max-width: 500px;
 }
 
 /* The Close Button (x) */
 
 .close {
+  line-height: 0;
   position: absolute;
-  right: 10px;
-  top: 0;
+  right: -5px;
+  top: 8px;
   color: #000;
   font-size: 35px;
   font-weight: bold;
-  padding-top: 2px;
+  /* padding-top: 2px; */
 }
 
 .close:hover, .close:focus {
@@ -73,10 +89,12 @@
 }
 
 .imgcontainer {
-  text-align: center;
+  /* text-align: center; */
   position: relative;
 }
 
-.container {
+/* .container {
   padding: 16px;
-}
+} */
+
+/* Remove container classname from js file */
