--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,5 @@
 nav {
   width: 100%;
-  max-width: 1000px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -29,7 +28,6 @@ nav {
 }
 
 .bar .bar-item {
-  padding: 8px 8px;
   float: left;
   width: auto;
   border: none;
@@ -73,10 +71,6 @@ nav {
   white-space: normal;
 }
 
-.wide {
-  letter-spacing: 4px;
-}
-
 .padding {
   padding: 8px;
 }
@@ -88,7 +82,6 @@ nav {
 .button-one {
   border: none;
   display: inline-block;
-  padding: 8px 16px;
   vertical-align: middle;
   overflow: hidden;
   text-decoration: none;
@@ -97,6 +90,10 @@ nav {
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
+  font-family: Verdana, sans-serif;
+  letter-spacing: 4px;
+  padding: 4px 8px;
+  font-size: 20px;
 }
 
 .button-one {
@@ -120,14 +117,10 @@ nav {
 
 @media (hover:hover) {
   .button-one:hover, .button-one:focus {
+    outline: none!important;
     color: #000!important;
     background-color: #f76c6c!important;
   }
-}
-
-.button-one {
-  padding: 4px 8px!important;
-  font-size: 20px;
 }
 
 .right {
@@ -143,7 +136,7 @@ nav {
 @media (max-width:700px) {
   .dropdown {
     background-color: #f76c6c;
-    margin-top: 48px;
+    margin-top: 40px;
     right: 0;
   }
   .dropdown a {
