--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,4 +1,5 @@
 .collapsible {
+  margin-top: 5px;
   background-color: #a8d0e6;
   color: black;
   cursor: pointer;
@@ -101,6 +102,7 @@ input, select {
     width: 208.4px!important
   }
   form label {
+    margin-bottom: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
