added max width for body

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html, body {
 
 body {
   background-color: #24305e;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0;
   -webkit-font-smoothing: antialiased;
