--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -8,8 +8,13 @@
 ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 li {
-  padding-bottom: 8px;
+  margin-bottom: 8px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
