width is now 100% on home screen

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ form {
 }
 
 .fullCentered {
+  width: 100%;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -89,7 +90,6 @@ form {
 
 a {
   text-decoration: none;
-  color: #24305e;
 }
 
 .whiteText {
