--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -127,26 +127,23 @@ address {
 /* Modal Content/Box */
 
 .modal-content {
+  position: relative;
   border-radius: 10px;
   margin: auto;
   width: 100%;
   max-width: 450px;
+  background: #E6E6E6;
 }
 
 /* The Close Button (x) */
 
 .close {
-  z-index: 1;
-  line-height: 0;
-  position: absolute;
-  right: -5px;
-  top: 8px;
   color: #000;
   font-size: 35px;
   font-weight: bold;
 }
 
-.close:hover, .close:focus {
+.imgcontainer:hover .close, .imgcontainer:focus .close {
   color: red;
   cursor: pointer;
 }
@@ -159,5 +156,8 @@ address {
 }
 
 .imgcontainer {
-  position: relative;
+  position: absolute;
+  right: 2px;
+  top: -5px;
+  z-index: 1;
 }
