--- a/src/components/Business.css
+++ b/src/components/Business.css
@@ -57,12 +57,35 @@ address {
   width: 65px;
   flex-direction: column;
   align-items: center;
-  border: 2px solid #24305e!important;
-  color: black!important;
+  border: 2px solid #24305e;
+  color: black;
   padding: 5px;
   border-radius: 10px;
   transform-origin: 0 0;
   transition: all 0.2s ease;
+  outline: none;
+}
+
+.uxLink:active {
+  box-shadow: 2px 2px 1px 1px #666;
+  transform: translateY(2px);
+}
+
+.other {
+  width: auto;
+  height: auto;
+  display: initial;
+  background-color: transparent;
+}
+
+.light {
+  color: white;
+  margin-top: 8px;
+  border-color: #a8d0e6;
+}
+
+.userFormButtonContainer {
+  padding-top: 8px
 }
 
 .uxLinkContainer {
@@ -97,6 +120,13 @@ address {
   .uxLink:hover .icon, .uxLink:focus .icon {
     filter: invert(1)
   }
+  .other:hover, .other:focus {
+    color: white!important
+  }
+  .light:hover, .light:focus {
+    background-color: #a8d0e6;
+    color: black!important;
+  }
   .uxLinkContainer a:hover, .uxLinkContainer a:focus {
     color: white!important
   }
@@ -124,6 +154,14 @@ address {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.blur {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+}
+
 /* Modal Content/Box */
 
 .modal-content {
@@ -132,7 +170,10 @@ address {
   margin: auto;
   width: 100%;
   max-width: 450px;
-  background: #E6E6E6;
+}
+
+.modal-content, .modal-content form {
+  background: #a8d0e6;
 }
 
 /* The Close Button (x) */
