--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 .App-header {
-  color: #a8d0e6;
+  color: #24305e;
   margin-bottom: 40px;
 }
 
 .App-header h1 {
   margin-top: 0;
   font-size: 90px;
-  color: #f76c6c;
+  color: #AA2E00;
 }
