--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,6 @@
 .aboutButton {
   background: none;
-  color: white;
+  color: #24305e;
   border: none;
   font-size: 20px;
   font-family: inherit;
