--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,25 +1,22 @@
 nav {
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
 }
 
 .icon {
-  height: 1.5em;
-}
-
-.icon {
   height: 100%;
   width: 24px;
+  filter: invert(1)
 }
 
 .bar {
   width: 100%;
   overflow: hidden;
-  background-color: #a8d0e6;
+  background-color: #24305e;
 }
 
 .center-content .bar {
@@ -85,7 +82,7 @@ nav {
   vertical-align: middle;
   overflow: hidden;
   text-decoration: none;
-  color: black;
+  color: white;
   background-color: inherit;
   text-align: center;
   cursor: pointer;
